--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
     "@types/node": "^12.20.20",
-    "@types/react": "^16.14.14",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.18",
     "firebase": "^8.10.0",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react": "^16.14.14"
   }
 }
